[package]
name = "docloom"
version = "0.0.1"
edition = "2024"
description = "Programmatically compose documents and render them to Markdown or styled terminal output."
license = "MIT"
homepage = "https://github.com/Pingid/docloom"
repository = "https://github.com/Pingid/docloom"
documentation = "https://github.com/Pingid/docloom#readme"
